--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/express": "^5.0.0",
+    "@types/express-useragent": "^1.0.5",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
@@ -53,5 +55,11 @@
       "eslint --fix",
       "git add"
     ]
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "express-useragent": "^1.0.15",
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1"
   }
 }
