--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "culene",
   "version": "1.0.1",
-  "description": "Define capable route handlers with type safe definitions",
+  "description": "Define express routes with structured input validation using Zod, manage responses, handle user authentication, and generate API documentation automatically",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "sideEffects": false,
