--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
     "@types/express-useragent": "^1.0.5",
     "@types/jest": "^29.5.14",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^9.17.0",
@@ -57,8 +61,14 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.5.0",
     "express-useragent": "^1.0.15",
+    "helmet": "^8.0.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
   }
