--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "express-useragent": "^1.0.15",
     "helmet": "^8.0.0",
     "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
   }
